# tgfeed

./: .gitignore  Cargo.toml  README.md
migrations/: 20211110195714_initial.sql  20211115211052_files.sql
src/: app.rs  db.rs  main.rs  models.rs  server.rs  settings.rs  telegram.rs
src/db/: mod.rs  models.rs
src/telegram/: mod.rs  parsers.rs
