[package]
name = "tgfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tg-collector = {path = "../feeder/tg-collector"}
tokio = {version="1", features=["full"]}
anyhow = "*"
futures = "*"
rss = {version = "*", features=["builders", "serde"]}
log = "0.4"
env_logger = "0.8.3"
config = "*"
serde = {version = "1", features = ["derive"]}
warp = "0.3"

[dependencies.sqlx]
version = "0.5.5"
features = ["sqlite", "runtime-tokio-rustls", "macros"]
